--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,8 +1,6 @@
 .appContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  width: fit-content;
+  margin: 0 auto;
   height: 100vh;
   background-color: #f0f0f0;
 }
