--- a/frontend/src/components/board/Board.module.css
+++ b/frontend/src/components/board/Board.module.css
@@ -2,4 +2,9 @@
   display: flex;
   gap: 16px;
   padding: 16px;
+  overflow-y: hidden;
+
+  height: calc(100vh - 120px);
+  overflow-x: auto;
+  overflow-y: auto;
 }
